# vg-rs

./: .gitmodules  Cargo.toml  README.md
vg-sys/: Cargo.toml  build.rs
vg-sys/src/: lib.rs
